_src/assets/scss/layout/_header.scss
.header {
  width: 100vw;
  height: 100vh;
  background-image: url("../images/cover.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  @include flex-column;
  justify-content: flex-end;
  align-items: center;
  color: $colorText2;

  .header-content {
    margin: 284px auto 45px auto;
    text-align: center;
  }
  .header-h1 {
    font-family: $fontTitle;
    font-size: 42px;
    margin-bottom: 10px;
    @include flex-column;
    text-transform: $uppercase;
  }

  @media all and (min-width: 768px) {
    .header-content {
      margin: 384px auto 120px auto;
    }
    .header-h1 {
      font-size: 80px;
      margin-bottom: 20px;
    }
    .header-text {
      font-size: 24px;
    }
  }
  @media all and (min-width: 1200px) {
    .header-h1 {
      font-size: 100px;
      margin-bottom: 0px;
    }
  }
}

